--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<div>Helloеокеоеоеоеко,{{name}}</div>
+<div>Helloеокеоеоеаааааааааааоеко,{{name}}</div>
 </body>
 </html>
